--- a/index.html
+++ b/index.html
@@ -15,28 +15,30 @@
       </div>
       <div class="buttons">
         <button class="grid-item" onclick="clearDisplay()">Del</button>
-        <button class="grid-item">(</button>
-        <button class="grid-item">)</button>
-        <button class="grid-item">mod</button>
-        <button class="grid-item">π</button>
-        <button class="grid-item" onclick="appendCharacter(7)">7</button>
-        <button class="grid-item" onclick="appendCharacter(8)">8</button>
-        <button class="grid-item" onclick="appendCharacter(9)">9</button>
-        <button class="grid-item">÷</button>
-        <button class="grid-item">√</button>
-        <button class="grid-item" onclick="appendCharacter(4)">4</button>
-        <button class="grid-item" onclick="appendCharacter(5)">5</button>
-        <button class="grid-item" onclick="appendCharacter(6)">6</button>
-        <button class="grid-item">x</button>
-        <button class="grid-item">x²</button>
-        <button class="grid-item" onclick="appendCharacter(1)">1</button>
-        <button class="grid-item" onclick="appendCharacter(2)">2</button>
-        <button class="grid-item" onclick="appendCharacter(3)">3</button>
-        <button class="grid-item">-</button>
-        <button class="item-equal">=</button>
-        <button class="grid-item" onclick="appendCharacter(0)">0</button>
-        <button class="grid-item">,</button>
-        <button class="grid-item">%</button>
+        <button class="grid-item" onclick="appendCharacter('(')">(</button>
+        <button class="grid-item" onclick="appendCharacter(')')">)</button>
+        <button class="grid-item" onclick="appendCharacter(' mod ')">
+          mod
+        </button>
+        <button class="grid-item" onclick="appendCharacter('π')">π</button>
+        <button class="grid-item" onclick="appendCharacter('7')">7</button>
+        <button class="grid-item" onclick="appendCharacter('8')">8</button>
+        <button class="grid-item" onclick="appendCharacter('9')">9</button>
+        <button class="grid-item" onclick="appendCharacter('÷')">÷</button>
+        <button class="grid-item" onclick="appendCharacter('√(')">√</button>
+        <button class="grid-item" onclick="appendCharacter('4')">4</button>
+        <button class="grid-item" onclick="appendCharacter('5')">5</button>
+        <button class="grid-item" onclick="appendCharacter('6')">6</button>
+        <button class="grid-item" onclick="appendCharacter('x')">x</button>
+        <button class="grid-item" onclick="appendCharacter('^2')">x²</button>
+        <button class="grid-item" onclick="appendCharacter('1')">1</button>
+        <button class="grid-item" onclick="appendCharacter('2')">2</button>
+        <button class="grid-item" onclick="appendCharacter('3')">3</button>
+        <button class="grid-item" onclick="appendCharacter('-')">-</button>
+        <button class="item-equal" onclick="calculateResult()">=</button>
+        <button class="grid-item" onclick="appendCharacter('0')">0</button>
+        <button class="grid-item" onclick="appendCharacter('.')">,</button>
+        <button class="grid-item" onclick="appendCharacter('%')">%</button>
         <button class="grid-item" onclick="appendCharacter('+')">+</button>
       </div>
     </div>
