--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <button class="grid-item" onclick="appendCharacter('8')">8</button>
         <button class="grid-item" onclick="appendCharacter('9')">9</button>
         <button class="grid-item" onclick="appendCharacter('÷')">÷</button>
-        <button class="grid-item" onclick="appendCharacter('√(')">√</button>
+        <button class="grid-item" onclick="appendCharacter('√')">√</button>
         <button class="grid-item" onclick="appendCharacter('4')">4</button>
         <button class="grid-item" onclick="appendCharacter('5')">5</button>
         <button class="grid-item" onclick="appendCharacter('6')">6</button>
